styling updates, table cleanup, search into homepage

--- a/content/machines/analog-four-mkii/manual.mdx
+++ b/content/machines/analog-four-mkii/manual.mdx
@@ -78,8 +78,9 @@ To reduce the risk of fire, electrical shock or product damage:
 
 # TABLE OF CONTENTS
 
-| [1. INTRODUCTION](#1-introduction) | Page |
+| Section | Page |
 |---|---|
+| [1. INTRODUCTION](#1-introduction) | 10 |
 | [1.1 CONVENTIONS IN THIS MANUAL](#1-1-conventions-in-this-manual) | 10 |
 | [2. ANALOG FOUR MKII BACKGROUND](#2-analog-four-mkii-background) | 11 |
 | [3. PANEL LAYOUT AND CONNECTORS](#3-panel-layout-and-connectors) | 12 |
@@ -4086,12 +4087,14 @@ FADE ENVELOPE
 
 # <span id="page-109-0"></span>INDEX
 
-| +DRIVE 16                                       | Synth config 65<br />GRID RECORDING MODE 40 |
+| +DRIVE 16 | Synth config 65 |
+|  | GRID RECORDING MODE 40 |
 |-------------------------------------------------|-------------------------------------------|
 | A                                               |
 | ACCENT 50                                       | K                                         |
 | ARPEGGIATOR 43                                  | KITS 24                                   |
-| Arpeggiator setup 44                            | Clear kit 25<br />Load kit 25               |
+| Arpeggiator setup 44 | Clear kit 25 |
+|  | Load kit 25 |
 | B                                               | Performance mode 26                       |
 | BACKUP 20                                       |
 |                                                 | L                                         |
@@ -4102,8 +4105,10 @@ FADE ENVELOPE
 | Setup example 81                                | Song 56                                   |
 | USB config 68                                   | M                                         |
 | CLICK TRACK 46                                  |
-| CONDITIONAL LOCKS 48, 49                        | METRONOME 46<br />MIDI                      |
-| CONNECTING THE UNIT 14<br />COPY, PASTE AND CLEAR | Auto channel 59                           |
+| CONDITIONAL LOCKS 48, 49 | METRONOME 46 |
+|  | MIDI |
+| CONNECTING THE UNIT 14 | Auto channel 59 |
+| COPY, PASTE AND CLEAR |  |
 | Kit 26                                          | MIDI channels 59                          |
 | Pattern 52                                      | MIDI port config 57                       |
 | Track 52                                        | MIDI sync 57                              |
@@ -4129,7 +4134,8 @@ FADE ENVELOPE
 | FILL MODE 49                                    | P                                         |
 | FILTERS 72                                      | PARAMETER EDITING 18                      |
 | 2-Pole 72                                       | Parameter value skip 18                   |
-| 4-Pole 72<br />FX TRACK 37                        | PARAMETER LOCKS 48                        |
+| 4-Pole 72 | PARAMETER LOCKS 48 |
+| FX TRACK 37 |  |
 |                                                 | PARAMETER SLIDE 51                        |
 | G                                               | PATTERN MODES 39                          |
 | GLOBAL MENU 57                                  | Direct jump 39                            |
