--- a/content/machines/analog-rytm-mkii/manual.mdx
+++ b/content/machines/analog-rytm-mkii/manual.mdx
@@ -89,11 +89,18 @@ To reduce the risk of fire, electrical shock or product damage:
 
 # TABLE OF CONTENTS
 
-| [1. INTRODUCTION](#1-introduction)<br />[1.1 CONVENTIONS IN THIS MANUAL](#1-1-conventions-in-this-manual) | 8<br />8 |
+| Section | Page |
+|---|---|
+| [1. INTRODUCTION](#1-introduction) | 8 |
+| [1.1 CONVENTIONS IN THIS MANUAL](#1-1-conventions-in-this-manual) | 8 |
 |------------------------------------------------------------------------------------------------------------------------------|----------------|
 | [2. THE ANALOG RYTM MKII](#2-the-analog-rytm-mkii) | 9 |
-| [3. PANEL LAYOUT AND CONNECTORS](#3-panel-layout-and-connectors)<br />[3.1 FRONT PANEL](#3-1-front-panel)<br />[3.2 REAR CONNECTORS](#3-2-rear-connectors)<br />[3.3 SETTING UP AND STARTING THE ANALOG RYTM MKII](#3-3-setting-up-and-starting-the-analog-rytm-mkii) | 10<br />10<br />12 |
-| [4. ANALOG RYTM MKII SOUND ARCHITECTURE](#4-analog-rytm-mkii-sound-architecture)<br />[4.1 VOICE CIRCUITS](#4-1-voice-circuits) | 13<br />13 |
+| [3. PANEL LAYOUT AND CONNECTORS](#3-panel-layout-and-connectors) | 10 |
+| [3.1 FRONT PANEL](#3-1-front-panel) | 10 |
+| [3.2 REAR CONNECTORS](#3-2-rear-connectors) | 12 |
+| [3.3 SETTING UP AND STARTING THE ANALOG RYTM MKII](#3-3-setting-up-and-starting-the-analog-rytm-mkii) |  |
+| [4. ANALOG RYTM MKII SOUND ARCHITECTURE](#4-analog-rytm-mkii-sound-architecture) | 13 |
+| [4.1 VOICE CIRCUITS](#4-1-voice-circuits) | 13 |
 | [4.2 ABOUT MACHINES](#4-2-about-machines) | 13 |
 | [5. OVERVIEW OF THE ANALOG RYTM MKII DATA STRUCTURE](#5-overview-of-the-analog-rytm-mkii-data-structure) | 14 |
 | [5.1 +DRIVE](#5-1-drive) | 14 |
@@ -103,7 +110,8 @@ To reduce the risk of fire, electrical shock or product damage:
 | [5.2.3 SOUNDS](#5-2-3-sounds) | 14 |
 | [5.2.4 SAMPLES](#5-2-4-samples) | 14 |
 | [5.2.5 PATTERNS](#5-2-5-patterns) | 14 |
-| [5.2.6 SONGS](#5-2-6-songs)<br />[5.2.7 GLOBALS](#5-2-7-globals) | 15<br />15 |
+| [5.2.6 SONGS](#5-2-6-songs) | 15 |
+| [5.2.7 GLOBALS](#5-2-7-globals) | 15 |
 | [5.3 ABOUT THE TRACKS](#5-3-about-the-tracks) | 15 |
 | [5.3.1 THE DRUM TRACKS](#5-3-1-the-drum-tracks) | 15 |
 | [5.3.2 THE FX TRACK](#5-3-2-the-fx-track) | 15 |
@@ -123,11 +131,13 @@ To reduce the risk of fire, electrical shock or product damage:
 | [6.7 CLASS COMPLIANT DEVICE](#6-7-class-compliant-device) | 18 |
 | [6.8 BACKING UP THE ANALOG RYTM MKII](#6-8-backing-up-the-analog-rytm-mkii) | 18 |
 | 6.8.1 BACKING UP PROJECTS, SOUNDS, AND SAMPLES                                                                               |
-| [6.8.2 TRANSFERRING BACKED UP FILES TO YOUR ELEKTRON DEVICE](#6-8-2-transferring-backed-up-files-to-your-elektron-device) | 18<br />18 |
+| [6.8.2 TRANSFERRING BACKED UP FILES TO YOUR ELEKTRON DEVICE](#6-8-2-transferring-backed-up-files-to-your-elektron-device) | 18 |
+|  | 18 |
 | [7. QUICK START](#7-quick-start) | 19 |
 | [7.1 PLAYING THE FACTORY PRESETS](#7-1-playing-the-factory-presets) | 19 |
 | [7.1.1 PERFORMANCE MODE](#7-1-1-performance-mode) | 19 |
-| [7.1.2 SCENE MODE](#7-1-2-scene-mode)<br />[7.1.3 CHROMATIC MODE](#7-1-3-chromatic-mode) | 19<br />19 |
+| [7.1.2 SCENE MODE](#7-1-2-scene-mode) | 19 |
+| [7.1.3 CHROMATIC MODE](#7-1-3-chromatic-mode) | 19 |
 | [7.1.4 MUTE MODE](#7-1-4-mute-mode) | 19 |
 | Section | Page |
 | [7.1.6 EDITING PARAMETERS](#7-1-6-editing-parameters) | 20 |
@@ -4098,7 +4108,8 @@ LEV (Level) sets the overall sound volume of the machine. (0–127)
 |--------------------------|-------------------------------------------|
 | A                        | Sequencer config 65                       |
 | ACCENT 48                | K                                         |
-| AMP 76                   | KEY COMBINATIONS 71<br />KITS AND SOUNDS 26 |
+| AMP 76 | KEY COMBINATIONS 71 |
+|  | KITS AND SOUNDS 26 |
 | B                        | Clear kit 27                              |
 | BACKUP 18                | Editing a sound 35                        |
 |                          | Kit menu 26                               |
@@ -4115,7 +4126,8 @@ LEV (Level) sets the overall sound volume of the machine. (0–127)
 | CONDITIONAL LOCKS 46, 47 | Parameters 92                             |
 |---|---|
 | CONNECTORS 12            | MICRO TIMING 39                           |
-| COPY, PASTE AND CLEAR 49 | MIDI 59<br />MIDI config 59                 |
+| COPY, PASTE AND CLEAR 49 | MIDI 59 |
+|  | MIDI config 59 |
 | D                        | MIDI CC & NRPN 82                         |
 |---|---|
 | DATA STRUCTURE 14        | MUTE MODE 23                              |
@@ -4131,7 +4143,8 @@ LEV (Level) sets the overall sound volume of the machine. (0–127)
 | LFO 76                   | P                                         |
 | Sample 74                | PANEL LAYOUT 10                           |
 | Synth 74                 | PARAMETER LOCKS 46                        |
-|                          | PATTERN MODES 38<br />Direct jump 38        |
+|  | PATTERN MODES 38 |
+|  | Direct jump 38 |
 | E                        | Direct start 38                           |
 | EARLY STARTUP MENU 67    | Sequential 38                             |
 | F                        | Temp jump 38                              |
