more mobile improvements and fixes on the mdx files

--- a/content/machines/analog-four-mkii/manual.mdx
+++ b/content/machines/analog-four-mkii/manual.mdx
@@ -1,83 +1,11 @@
 ---
 title: "Analog Four MKII"
-description: "Owner's manual for the Analog Four MKII"
+description: "Owner's manual"
 tags: []
 date: "2025-12-21"
 ---
 
-# Analog Four Analog Four MKII MKI
-
-User Manual
-
-# zelektron
-
-# FCC compliance statement
-
-This device complies with part 15 of the FCC rules. Operation is subject to the following two conditions: (1) This device may not cause harmful interference, and (2) this device must accept any interference received, including interference that may cause undesired operation.
-
-NOTE: This equipment has been tested and found to comply with the limits for a Class B digital device, pursuant to Part 15 of the FCC Rules. These limits are designed to provide reasonable protection against harmful interference in a residential installation. This equipment generates, uses and can radiate radio frequency energy and, if not installed and used in accordance with the instructions, may cause harmful interference to radio communications. However, there is no guarantee that interference will not occur in a particular installation. If this equipment does cause harmful interference to radio or television reception, which can be determined by turning the equipment off and on, the user is encouraged to try to correct the interference by one or more of the following measures:
-
-- Reorient or relocate the receiving antenna.
-- Increase the separation between the equipment and receiver.
-- Connect the equipment into an outlet on a circuit different from that to which the receiver is connected.
-- Consult the dealer or an experienced radio/TV technician for help.
-
-WARNING: Cancer and Reproductive Harm – www.P65Warnings.ca.gov
-
-## Canada
-
-This Class B digital apparatus complies with Canadian ICES-003. Cet appareil numérique de la classe B est conforme à la norme NMB-003.
-
-## European Union regulation compliance statement
-
-This product has been tested to comply with the Low Voltage Directive 2006/95/EC and the Electromagnetic Compatibility Directive 2004/108/EC. The product meets the requirements of RoHS 2 Directive 2011/65/EU.
-
-![](/machines/analog-four-mkii/images/_page_1_Picture_12.jpeg)
-
-This symbol indicates that your product must be disposed of properly according to local laws and regulations.
-
-## Legal disclaimer
-
-The information in this document is subject to change without notice and should not be construed as a commitment by Elektron. Elektron assumes no responsibility for any errors that may appear in this document. Elektron may also make improvements and/or changes in the products and programs described in this document at any time without notice. In no event shall Elektron be liable for any special, indirect, or consequential damages or any damages whatsoever resulting from loss of use, data, or profits, whether in an action of contract, negligence, or other action, arising out of or in connection with the use or performance of this information.
-
-# <span id="page-2-0"></span>IMPORTANT SAFETY AND MAINTENANCE INSTRUCTIONS
-
-Please read these instructions carefully and adhere to the operating advice.
-
-1. Do not use this unit near water.
-2. Never use aggressive cleaners on the casing or on the screen. Remove dust, dirt and fingerprints with a soft, dry and non-abrasive cloth. More persistent dirt can be removed with a slightly damp cloth using only water. Disconnect all cables while doing this. Only reconnect them when the product is safely dry.
-3. To avoid scratches or damage, never use sharp objects near the casing or the screen. Avoid applying any pressure to the screen itself.
-4. Install in accordance with the manufacturer's instructions. Make sure you place the unit on a stable surface before use. If you mount the unit in a rack, be sure to tighten all four screws in the rack mount holes.
-5. Connect the unit to an easily accessible electrical outlet close to the unit.
-6. When transporting the unit, use accessories recommended by the manufacturer or the original box and padding.
-7. Do not install near any heat sources such as radiators, heat registers, stoves, or any other equipment (including amplifiers) producing heat.
-8. Do not put a protective cover on the unit while the unit is powered on.
-9. This product, by itself or in combination with amplifiers, headphones or speakers, is capable of producing sound levels that may cause permanent hearing loss. Do not operate at a high volume level or at a level that is uncomfortable.
-10. Protect the power cord from being walked on or pinched particularly at plugs, convenience receptacles, and the point where they exit from the unit.
-11. Use attachments/accessories specified by the manufacturer.
-12. Unplug this unit during lightning storms or when it is not used for long periods of time.
-13. Refer all servicing to qualified service technicians. Servicing is required when the unit has been damaged in any way, liquid has been spilled or objects have fallen into the unit, the unit has been exposed to rain or moisture, does not operate normally, or has been dropped.
-
-# WARNING
-
-To reduce the risk of fire, electrical shock or product damage:
-
-- Do not expose the unit to rain, moisture, dripping or splashing and also avoid placing objects filled with liquid, such as vases, on the unit.
-- Do not expose the unit to direct sunlight, nor use it in ambient temperatures exceeding 35°C as this can lead to malfunction.
-- Do not open the casing. There are no user repairable or adjustable parts inside. Leave service and repairs to trained service technicians only.
-- Do not exceed the limitations specified in the Electrical specifications.
-
-# SAFETY INSTRUCTIONS FOR THE POWER ADAPTER
-
-- The adapter is not safety grounded and may only be used indoors.
-- To ensure good ventilation for the adapter, do not place it in tight spaces. To prevent risk of electric shock and fire because of overheating, ensure that curtains and other objects do not prevent adapter ventilation.
-- Do not expose the power adapter to direct sunlight, nor use it in ambient temperatures exceeding 40°C.
-- Connect the adapter to an easily accessible electrical outlet close to the unit.
-- The adapter is in standby mode when the power cord is connected. The primary circuit is always active when the cord is connected to the power outlet. Pull out the cord to completely disconnect the adapter.
-- In the EU, only use CE approved power cords.
-
 # TABLE OF CONTENTS
-
 | Section | Page |
 |---|---|
 | [1. INTRODUCTION](#1-introduction) | 10 |
@@ -4201,4 +4129,71 @@ FADE ENVELOPE
 Normal mode [46](#page-45-0)
 
 ![](/machines/analog-four-mkii/images/_page_111_Picture_0.jpeg)
+
+# Elektron
+
+# FCC compliance statement
+
+This device complies with part 15 of the FCC rules. Operation is subject to the following two conditions: (1) This device may not cause harmful interference, and (2) this device must accept any interference received, including interference that may cause undesired operation.
+
+NOTE: This equipment has been tested and found to comply with the limits for a Class B digital device, pursuant to Part 15 of the FCC Rules. These limits are designed to provide reasonable protection against harmful interference in a residential installation. This equipment generates, uses and can radiate radio frequency energy and, if not installed and used in accordance with the instructions, may cause harmful interference to radio communications. However, there is no guarantee that interference will not occur in a particular installation. If this equipment does cause harmful interference to radio or television reception, which can be determined by turning the equipment off and on, the user is encouraged to try to correct the interference by one or more of the following measures:
+
+- Reorient or relocate the receiving antenna.
+- Increase the separation between the equipment and receiver.
+- Connect the equipment into an outlet on a circuit different from that to which the receiver is connected.
+- Consult the dealer or an experienced radio/TV technician for help.
+
+WARNING: Cancer and Reproductive Harm – www.P65Warnings.ca.gov
+
+## Canada
+
+This Class B digital apparatus complies with Canadian ICES-003. Cet appareil numérique de la classe B est conforme à la norme NMB-003.
+
+## European Union regulation compliance statement
+
+This product has been tested to comply with the Low Voltage Directive 2006/95/EC and the Electromagnetic Compatibility Directive 2004/108/EC. The product meets the requirements of RoHS 2 Directive 2011/65/EU.
+
+![](/machines/analog-four-mkii/images/_page_1_Picture_12.jpeg)
+
+This symbol indicates that your product must be disposed of properly according to local laws and regulations.
+
+## Legal disclaimer
+
+The information in this document is subject to change without notice and should not be construed as a commitment by Elektron. Elektron assumes no responsibility for any errors that may appear in this document. Elektron may also make improvements and/or changes in the products and programs described in this document at any time without notice. In no event shall Elektron be liable for any special, indirect, or consequential damages or any damages whatsoever resulting from loss of use, data, or profits, whether in an action of contract, negligence, or other action, arising out of or in connection with the use or performance of this information.
+
+# <span id="page-2-0"></span>IMPORTANT SAFETY AND MAINTENANCE INSTRUCTIONS
+
+Please read these instructions carefully and adhere to the operating advice.
+
+1. Do not use this unit near water.
+2. Never use aggressive cleaners on the casing or on the screen. Remove dust, dirt and fingerprints with a soft, dry and non-abrasive cloth. More persistent dirt can be removed with a slightly damp cloth using only water. Disconnect all cables while doing this. Only reconnect them when the product is safely dry.
+3. To avoid scratches or damage, never use sharp objects near the casing or the screen. Avoid applying any pressure to the screen itself.
+4. Install in accordance with the manufacturer's instructions. Make sure you place the unit on a stable surface before use. If you mount the unit in a rack, be sure to tighten all four screws in the rack mount holes.
+5. Connect the unit to an easily accessible electrical outlet close to the unit.
+6. When transporting the unit, use accessories recommended by the manufacturer or the original box and padding.
+7. Do not install near any heat sources such as radiators, heat registers, stoves, or any other equipment (including amplifiers) producing heat.
+8. Do not put a protective cover on the unit while the unit is powered on.
+9. This product, by itself or in combination with amplifiers, headphones or speakers, is capable of producing sound levels that may cause permanent hearing loss. Do not operate at a high volume level or at a level that is uncomfortable.
+10. Protect the power cord from being walked on or pinched particularly at plugs, convenience receptacles, and the point where they exit from the unit.
+11. Use attachments/accessories specified by the manufacturer.
+12. Unplug this unit during lightning storms or when it is not used for long periods of time.
+13. Refer all servicing to qualified service technicians. Servicing is required when the unit has been damaged in any way, liquid has been spilled or objects have fallen into the unit, the unit has been exposed to rain or moisture, does not operate normally, or has been dropped.
+
+# WARNING
+
+To reduce the risk of fire, electrical shock or product damage:
+
+- Do not expose the unit to rain, moisture, dripping or splashing and also avoid placing objects filled with liquid, such as vases, on the unit.
+- Do not expose the unit to direct sunlight, nor use it in ambient temperatures exceeding 35°C as this can lead to malfunction.
+- Do not open the casing. There are no user repairable or adjustable parts inside. Leave service and repairs to trained service technicians only.
+- Do not exceed the limitations specified in the Electrical specifications.
+
+# SAFETY INSTRUCTIONS FOR THE POWER ADAPTER
+
+- The adapter is not safety grounded and may only be used indoors.
+- To ensure good ventilation for the adapter, do not place it in tight spaces. To prevent risk of electric shock and fire because of overheating, ensure that curtains and other objects do not prevent adapter ventilation.
+- Do not expose the power adapter to direct sunlight, nor use it in ambient temperatures exceeding 40°C.
+- Connect the adapter to an easily accessible electrical outlet close to the unit.
+- The adapter is in standby mode when the power cord is connected. The primary circuit is always active when the cord is connected to the power outlet. Pull out the cord to completely disconnect the adapter.
+- In the EU, only use CE approved power cords.
 
