--- a/content/machines/getting-started.mdx
+++ b/content/machines/getting-started.mdx
@@ -23,13 +23,13 @@ This documentation site is built with modern web technologies:
 To run this project locally, follow these steps:
 
 ```bash
-# Clone the repository
+# Clone the Repository
 git clone <your-repo-url>
 
-# Install dependencies
+# Install Dependencies
 npm install
 
-# Start the development server
+# Start the Development Server
 npm run dev
 ```
 
@@ -87,7 +87,7 @@ function greetUser(user: User): string {
 ```
 
 ```python
-# Python example
+# Python Example
 def fibonacci(n: int) -> list[int]:
     """Generate Fibonacci sequence up to n numbers."""
     sequence = [0, 1]
