--- a/content/machines/analog-four-mkii/manual.mdx
+++ b/content/machines/analog-four-mkii/manual.mdx
@@ -1136,7 +1136,7 @@ Sounds can be played back in portamento or legato modes. Settings controlling th
 
 When selecting the FX track, the **[TRACK]** key of the previously active track will become halfbright red. This indicates that the **[KEYBOARD]** keys still trig notes on this track. This allows hearing how effect parameter changes will affect the previously active track. Press the **[FX]** track key again to make the FX track fully active. The **[KEYBOARD]** keys will then control the FX track.
 
-## 9.12.1 Playing a Sound with a Midi Keyboard
+## 9.12.1 Playing a Sound with a MIDI Keyboard
 
 The synth voices are also possible to play with an external MIDI keyboard connected to the Analog Four MKII. Which MIDI tracks the voices respond are set up in the MIDI CHANNELS menu.[tion, please see "12.3.3 CHANNELS" on page 59.](#12-3-3-channels)
 
@@ -1551,7 +1551,7 @@ Sets the key note of the track. This setting affects how the track will be trans
 
 Will when activated make the track transposable. If deactivated, the track can not be transposed, which can be a relevant setting for tracks containing drum sounds. A quick command for this setting exists. Press **[TRNS]** + **[TRACK]** to activate/deactivate the transpose functionality for a track.[mation, please see "10.12.10 TRACK TRANSPOSE" on page 51.](#10-12-10-track-transpose)
 
-## <span id="page-45-1"></span>10.9.6 Send Midi
+## <span id="page-45-1"></span>10.9.6 Send MIDI
 
 Will, when checked, send the tracks note on/off (NOTE, LEN) and VELOCITY, sequencer data to the Analog Four MKII's MIDI OUT for control of external MIDI devices. The MIDI data is sent on the track's MIDI channel that is set in the CHANNELS menu. [For more information, please see "12.3.3 CHANNELS"](#12-3-3-channels)
 
@@ -1944,7 +1944,7 @@ Here you manage your projects. [For more information, please see "8.1 PROJECT ME
 
 Selects which of the four Global slots to use. Select the active slot by using the **[LEFT]**/**[RIGHT]** arrow keys. Press **[YES]** to confirm the selection. All changes made to a Global slot are automatically saved. A slot stores the current configuration of the synth, sequencer, CV and MIDI settings. All changes made to a Global slot are automatically saved.
 
-# 12.3 Midi Config
+# 12.3 MIDI Config
 
 In this menu, various sub-menus dealing with the MIDI functionality of the Analog Four MKII are found.
 
@@ -3587,7 +3587,7 @@ DST (LFO2 Destination B) selects the second of the two available destinations fo
 
 DEP (LFO2 Depth B) sets how much the LFO2 will modulate the destination chosen by the second DST parameter. The knob is bipolar (both negative and positive modulation depth is possible).
 
-# <span id="page-99-1"></span><span id="page-99-0"></span>Appendix D: Midi
+# <span id="page-99-1"></span><span id="page-99-0"></span>Appendix D: MIDI
 
 This appendix covers the MIDI CC and NRPN implementation. The data range of each parameters CC and/ or NRPN value is written in parentheses after the value.
 
