--- a/content/machines/analog-rytm-mkii/manual.mdx
+++ b/content/machines/analog-rytm-mkii/manual.mdx
@@ -693,7 +693,7 @@ The mode keys [PLAY MODE], **[MUTE]**, **[CHRO]**, **[SCNE]** and **[PERF]** key
 
 The **[TRK]**, **[FUNC]** and **[RTRG]** keys must be pressed in combination with other keys to exert functionality.
 
-# <span id="page-21-2"></span>8.6 Midi Notes
+# <span id="page-21-2"></span>8.6 MIDI Notes
 
 Some functions can be triggered by sending MIDI note values from an external MIDI device (a MIDI keyboard or a computer, for example) connected to the Analog Rytm MKII via standard MIDI cable or a USB 2.0 A to B connector cable.
 
@@ -1120,7 +1120,7 @@ Press and hold **[RTRG]**, then press and hold any of the **[PADS]** to continuo
 
 Sounds that are designed for aftertouch play may be played by tapping and then pressing a pad without lifting your finger in between. Settings controlling this can be found in the SOUND menu. For more information, please see ["10.5 SOUND MENU" on page 31](#10-5-sound-menu).
 
-## Playing a Sound with an External Midi Unit
+## Playing a Sound with an External MIDI Unit
 
 Besides using the **[PADS]**, the Sounds can also be played using an external MIDI controller or keyboard connected to Analog Rytm MKII. Which MIDI tracks the voices respond to are set up in the MIDI CHAN-NELS menu, covered in the section ["14.4.3 CHANNELS" on page 61](#14-4-3-channels).
 
@@ -1981,7 +1981,7 @@ Consequently, samples sent from a computer will be written into the new destinat
 
 Selects which of the four Global slots to use. Select the active slot by using the **[LEFT]**/**[RIGHT]** arrow keys. Press **[YES]** to confirm the selection. All changes made to a Global slot are automatically saved. A slot stores the current configuration of the sequencer, MIDI and track routing settings. All changes made to a Global slot are automatically saved.
 
-## 14.4 Midi Config
+## 14.4 MIDI Config
 
 In this menu, various sub-menus dealing with the MIDI functionality of Analog Rytm MKII are found.
 
@@ -2965,7 +2965,7 @@ MOD (Trig Mode) sets how the LFO will act when a note is trigged. Five settings 
 
 DEP (Depth) sets the depth and polar orientation of the LFO modulation. Both negative (inverted) and positive modulation depth is possible. Positive values start the oscillation toward the crest phase of the wave. Negative values start toward the trough phase of the wave. A dead center setting, 0, equals no modulation depth at all. (-128–+127)
 
-# <span id="page-81-1"></span><span id="page-81-0"></span>Appendix C: Midi
+# <span id="page-81-1"></span><span id="page-81-0"></span>Appendix C: MIDI
 
 This appendix lists the CC and NRPN specification for the Analog Rytm MKII.
 
@@ -3469,7 +3469,7 @@ The following shows the SYNTH parameters per MACHINE type.
 | Attack | 17 | 1 | 1 |
 | Decay | 18 | 1 | 2 |
 | Polarity | 19 | 1 | 3 |
-## C.8 Midi Note Triggers
+## C.8 MIDI Note Triggers
 
 Some functions of the Analog Rytm MKII can be triggered by sending MIDI note values from an external MIDI device.
 
