fixed mdx formatting bugs

--- a/content/machines/analog-four-mkii/manual.mdx
+++ b/content/machines/analog-four-mkii/manual.mdx
@@ -337,8 +337,7 @@ Analog Four MKII User Manual. This manual is copyright © 2022 Elektron Music Ma
 13. **[PARAMETER]** keys switch between the PARAMETER pages of the active track. The text on the keys indicates the pages for the four synth tracks. The first row of white text under the keys is for the FX track pages and the second row of white text indicates the CV track pages. A second press on the **[PARAMETER]** key will in some cases open secondary PARAMETER pages. The **[PARAMETER]** keys indicate in white (red on grey devices) that the first page is active, or with dimmed white (green on grey devices) that the second page is active.
 14. **[OCT-/+]** keys transpose the **[KEYBOARD]** keys. **\<OCTAVE\>** LEDs shows the current transposition.
 15. *DATA ENTRY* knobs. Used for adjusting parameters.
-
-- <span id="page-12-0"></span>16. The **[TRACK]** keys select the active track. Four synth tracks, one FX track, and one CV track are available. They are called **[T1–4]**, **[FX]**, and **[CV]**. **[FUNC]** + **[TRACK]** mutes a track. The color of the **[TRACK]** keys indicates the track status. Red=active track. Green=audible track. No light=muted track. Yellow=active and muted track. Dim red=track that is affected with **[KEYBOARD]** keys (When FX track is active).
+16. <span id="page-12-0"></span>The **[TRACK]** keys select the active track. Four synth tracks, one FX track, and one CV track are available. They are called **[T1–4]**, **[FX]**, and **[CV]**. **[FUNC]** + **[TRACK]** mutes a track. The color of the **[TRACK]** keys indicates the track status. Red=active track. Green=audible track. No light=muted track. Yellow=active and muted track. Dim red=track that is affected with **[KEYBOARD]** keys (When FX track is active).
 17. **[TRNS]** is used to transpose the note trigs on the tracks. The secondary function locks the transpose function.
 18. **[KEYBOARD]** keys are used for playing sounds and assigning note values to note trigs. The first key is called [KEYBOARD C1].
 19. **[FILL]** Activates FILL mode (when GRID RECORDING mode is not active). The secondary function cues the FILL mode.
@@ -369,7 +368,7 @@ Analog Four MKII User Manual. This manual is copyright © 2022 Elektron Music Ma
 2. DC IN, Use the included Elektron PSU-3b power adapter, connected to a power outlet.
 3. High Speed USB 2.0, Use an A to B USB 2.0 connector cable to a computer host.
 
-- <span id="page-13-0"></span>4. EXP/CV IN CONTROL INPUT, Inputs for expression pedal or CV. Use standard 1/4" mono phone plug for CV signals.
+4. <span id="page-13-0"></span>EXP/CV IN CONTROL INPUT, Inputs for expression pedal or CV. Use standard 1/4" mono phone plug for CV signals.
 5. MIDI THRU/SYNC B, Forwards data from MIDI IN. Can also be configured to send DIN sync to legacy instruments. Use a standard MIDI cable to connect another MIDI device in the chain.
 6. MIDI OUT/SYNC A, MIDI data output. Can also be configured to send DIN sync to legacy instruments. Use a standard MIDI cable to connect to MIDI In of an external MIDI device.
 7. MIDI IN, MIDI data input. Use a standard MIDI cable to connect to MIDI Out of an external MIDI device.
@@ -1343,7 +1342,7 @@ STEP RECORDING is a quick and straightforward method of placing trigs on the seq
 
 1. Press [T1–4, FX, CV] to select the track to which you want to add trigs. A green [T1–4, FX, CV] key light indicates the active track.
 
-- <span id="page-40-0"></span>2. Press **[RECORD]** + **[STOP]** to enter STEP RECORDING mode. The **[RECORD]** key starts to double-blink red. (Press **[STOP]** twice while keeping the **[RECORD]** key pressed to toggle between STANDARD and JUMP mode).
+2. <span id="page-40-0"></span>Press **[RECORD]** + **[STOP]** to enter STEP RECORDING mode. The **[RECORD]** key starts to double-blink red. (Press **[STOP]** twice while keeping the **[RECORD]** key pressed to toggle between STANDARD and JUMP mode).
 3. Press a **[TRIG]** key to select the active step to where you want to start to add note trigs. The active step is shown with a green **[TRIG]** key that double-blinks. (If positioned on an earlier placed trig, it inherits the light pattern of that trig). You can also use **[LEFT]**/**[RIGHT]** to select the active step or skip steps.
 4. Press the **[KEYBOARD]** keys or use an external MIDI controller to add a note trigs to the selected step. The active step then automatically advances to the next step. You can use **[OCT+]**/**[OCT-]** to transpose the **[KEYBOARD]** keys up or down one octave. To play a track polyphonically, the track must be configured to use several voices. [For more information, please see "9.5.1 POLYPHONY](#9-5-1-polyphony)
 5. To remove a trig or to add a rest (no trig), position the active step on the trig that you want to remove or add a rest to, and then press **[NO]**. The active step then automatically advances to the next step.
